--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
     <h1 id="weather"></h1>
-    <h1 id="forcast">
-        <ul id="tomorrow">
-            <li></li>
-            <li></li>
-            <li></li>
+    <h2 id="uvi"></h2>
+    <h2 id="forcast">
+        <ul id="tomorrow">Tomorrow
+            <li id="tomorrow9Am"></li>
+            <li id="tomorrow12Pm"></li>
+            <li id="tomorrow6Pm"></li>
         </ul>
-        <ul id="nextDay">
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul id="nextDay">Next Day
+            <li id="nextDay9Am"></li>
+            <li id="nextDay12Pm"></li>
+            <li id="nextDay6Pm"></li>
         </ul>
-        <ul id="followingDay">
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul id="followingDay">Following Day
+            <li id="followingDay9Am"></li>
+            <li id="followingDay12Pm"></li>
+            <li id="followingDay6Pm"></li>
         </ul>
-    </h1>
+    </h2>
     <script src="assests/script.js"></script>
 </body>
 </html>
