--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="assests/moments.js"></script>
     <title>Weather App</title>
 </head>
+
 <body>
+    <form>
+        <input class="userCity" placeholder="Enter City" type="text" id="userCity">
+        <input type="submit" id="userCitySub">
+    </form>
     <h1 id="weather"></h1>
     <h2 id="uvi"></h2>
     <h2 id="forcast">
@@ -28,4 +35,5 @@
     </h2>
     <script src="assests/script.js"></script>
 </body>
+
 </html>
