--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form>
+    <form id="submit">
         <input class="userCity" placeholder="Enter City" type="text" id="userCity">
         <input type="submit" id="userCitySub">
     </form>
@@ -31,6 +31,16 @@
             <li id="followingDay9Am"></li>
             <li id="followingDay12Pm"></li>
             <li id="followingDay6Pm"></li>
+        </ul>
+        <ul id="followingNextDay">Following Next Day
+            <li id="followingNextDay9Am"></li>
+            <li id="followingNextDay12Pm"></li>
+            <li id="followingNextDay6Pm"></li>
+        </ul>
+        <ul id="NextFollowingDay">Next Following Day
+            <li id="NextFollowingDay9Am"></li>
+            <li id="NextFollowingDay12Pm"></li>
+            <li id="NextFollowingDay6Pm"></li>
         </ul>
     </h2>
     <script src="assests/script.js"></script>
