humidity and wind speed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <input type="submit" id="userCitySub">
     </form>
     <h1 id="weather"></h1>
-    <h2 id="uvi"></h2>
+        <div id="hum"></div>
+        <div id="wind"></div>
+        <div id="uvi"></div>
     <h2 id="forcast">
         <ul id="tomorrow">Tomorrow
             <li id="tomorrow9Am"></li>
