Max said to turn in now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <input class="userCity" placeholder="Enter City" type="text" id="userCity">
         <input type="submit" id="userCitySub">
     </form>
-    <h1 id="weather"></h1>
+    <h1 id="currentTime"></h1>
+        <div id="weather"></div>
         <div id="hum"></div>
         <div id="wind"></div>
         <div id="uvi"></div>
